Velcro test First SandBox/src/objects/Marketing_Needs__c.object
<CustomObject>
    <fields>
        <fullName>Account_Name__c</fullName>
        <formula>TacticMarketing__r.Account_Name__c</formula>
        <label>Account Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Acct_Plan__c</fullName>
        <formula>TacticMarketing__r.Strategy__r.AccountPlan__r.Name</formula>
        <label>Business Plan</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Marketing_Need_Overview__c</fullName>
        <inlineHelpText>Provide a brief description of how Marketing can help you</inlineHelpText>
        <label>Marketing Need Overview</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Marketing_Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Collateral</fullName>
                </value>
                <value>
                    <fullName>Customer Testimonial/Reference</fullName>
                </value>
                <value>
                    <fullName>Email / Mailing Campaign</fullName>
                </value>
                <value>
                    <fullName>Call Campaign</fullName>
                </value>
                <value>
                    <fullName>Trade Show(s) Presence</fullName>
                </value>
                <value>
                    <fullName>Customer Visits(s)</fullName>
                </value>
                <value>
                    <fullName>Samples/Demos</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Needed_By_est__c</fullName>
        <label>Needed By (est)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Strategy__c</fullName>
        <formula>TacticMarketing__r.Strategy__r.Name</formula>
        <label>Strategy</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TacticMarketing__c</fullName>
        <label>Tactics</label>
        <referenceTo>SFDC_Strategy__c</referenceTo>
        <relationshipLabel>Marketing Needs</relationshipLabel>
        <relationshipName>Marketing_Needs</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <label>Marketing Need</label>
    <nameField>
        <label>Marketing Needs Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Marketing Needs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>